# SMARTCLI

./: .Dockerignore  Dockerfile  config.yaml  install.sh  main.py  pyproject.toml  requirements.txt  setup.py
2Smartcli/: config.yaml  main.py  setup.py
2Smartcli/llm_engines/: gemini_llm.py  openai_llm.py
llm_engines/: groq_llm.py  ollama_llm.py  openrouter_llm
smartcli/: config.yaml  scli.py  setup_llm.py
smartcli/llm_engines/: gemini_llm.py  groq_llm.py  ollama_llm.py  openai_llm.py  openrouter_llm.py
